@@ -18,7 +18,6 @@ import uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.GeneralApplication
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_COLLECTION;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.model.ccd.CCDConfigConstant.GENERAL_APPLICATION_CREATED_BY;
@@ -64,8 +63,7 @@ public class GeneralApplicationOutcomeAboutToSubmitHandler
             final String valueCode = dynamicList.getValueCode();
             log.info("Selected dynamic list code : {} Case ID: {}", valueCode, caseId);
             final List<GeneralApplicationCollectionData> applicationCollectionDataList
-                = existingList.stream().map(ga -> setStatusForElement(caseData, ga, valueCode, outcome)).sorted(helper::getCompareTo).collect(
-                Collectors.toList());
+                = existingList.stream().map(ga -> setStatusForElement(caseData, ga, valueCode, outcome)).sorted(helper::getCompareTo).toList();
 
             log.info("applicationCollectionDataList : {} caseId {}", applicationCollectionDataList.size(), caseId);
             caseData.put(GENERAL_APPLICATION_COLLECTION, applicationCollectionDataList);
